# civic-care-backend

./: .gitignore  README.md  schema_definitions.sql  schema_definitions_v2.sql  seed_data_v2.sql  seed_hierarchy.sql  seed_zones.sql
api/: .env.example  SECURITY.md  main.py  pyproject.toml  test_analytics_pdf.py
api/app/api/: deps.py
api/app/api/v1/: router.py
api/app/api/v1/endpoints/: analytics.py  attendance.py  auth.py  chat.py  grievances.py  internal_messages.py  uploads.py  wards.py  weather.py  workers.py
api/app/core/: config.py  security.py
api/app/db/: database.py  ensure_schema.py  init_db.py
api/app/middleware/: __init__.py  request_response_logger.py
api/app/models/: __init__.py  models.py
api/app/schemas/: attendance.py  auth.py  grievance.py  internal_messages.py  ward.py  weather.py  worker.py
api/app/services/: analytics_pdf.py  attendance_location.py  chat_service.py  cis_cron.py  cis_service.py  delhi_ward_lookup.py  eps_service.py  escalation_cron.py  ollama_service.py  party_map_pdf.py  ward_lookup.py  weather_service.py  worker_rating_service.py
api/app/static/admin/: index.html
api/app/static/admin/css/: style.css
api/app/static/admin/js/: app.js
api/app/tests/: verify_eps.py
api/scripts/: migrate_grievance_ratings.py
